# set-effort-analysis

./: .pre-commit-config.yaml  pyproject.toml
data/software-landscape/: github-dbmi-set-members.yaml  github-orgs.yaml
set_effort_analysis/: dbmi-related-software-landscape.ipynb  dbmi-related-software-landscape.py  github_contributions_fy_2023.ipynb  github_contributions_fy_2023.py
